# proyecto-horizontes

./: .gitignore  README.md  conftest.py  sim_net.py
horizonte/: .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  __init__.py  docker-compose.yml  pyproject.toml  requirements.txt
horizonte/api/: __init__.py  main.py
horizonte/common/: __init__.py  config.py  db.py  logging.py  security.py
horizonte/core/: __init__.py  adaptive_cache.json  adaptive_learning.py  ethics_filter.py  ethics_monitor.py  inference_engine.py  metacognition.py  security_monitor.py  telemetry.py  trace_logger.py
horizonte/education/: __init__.py  dataset_viewer.py  explainer.py  tutorial_gen.py
horizonte/governance/: __init__.py  audit.py  audit_engine.py  auto_governor.py  transparency_api.py  vote_system.py
horizonte/net/: __init__.py  cognitive_sync.py  consensus_manager.py  heartbeat.py  node_manager.py  node_registry.py  sim_net.py  sync_protocol.py  verifier.py
horizonte/scripts/: dev_seed.py  smoke.sh
horizonte/tests/: __init__.py  conftest.py  test_adaptive_learning.py  test_api_audit.py  test_api_infer.py  test_audit_engine.py  test_auto_governor.py  test_cognition_api.py  test_cognitive_sync.py  test_consensus.py  test_consensus_async.py  test_core_engine.py  test_dashboard.py  test_dashboard_network.py  test_ethics_monitor.py  test_heartbeat.py  test_live_dashboard.py  test_metacognition.py  test_metrics.py  test_node_registry.py  test_security.py  test_security_monitor.py  test_security_utils.py  test_supervision_api.py  test_sync_protocol.py  (+2 more)
(+32 files in other folders)
